# genie-lamp-mcp

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  SKILLS_IMPLEMENTATION.md  TOOLS.md  configure.sh  install.sh  pyproject.toml  verify_skills.py
docs/: SKILLS_GUIDE.md
examples/: basic_usage.py
src/genie_mcp_server/: __main__.py  auth.py  config.py  server.py
src/genie_mcp_server/client/: genie_client.py  polling.py
src/genie_mcp_server/generators/: prompts.py  schema_exporter.py  space_config_generator.py  templates.py  validator.py
src/genie_mcp_server/models/: protobuf_format.py  responses.py  space.py
src/genie_mcp_server/skills/: __init__.py  ask_skill.py  bulk_skill.py  create_space_skill.py  inspect_skill.py
src/genie_mcp_server/skills/utils/: __init__.py  config_analyzer.py  conversation_manager.py  result_formatter.py  space_orchestrator.py  warehouse_discovery.py
src/genie_mcp_server/tools/: config_gen_tools.py  conversation_tools.py  space_tools.py
src/genie_mcp_server/utils/: error_handling.py  rate_limiter.py
